# NM_spline

./: README.md  d_diffFS.csv  diffFS.csv  koef_abcd.csv  pyproject.toml
nm_lab1_spline/: GUI.py  build_spline.py  progon.py
tests/: test_nm_lab1_spline.py
